[package]
name = "rusty_dom"
version = "0.1.0"
authors = ["nbursa@gmail.com"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.6"
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

