[package]
name = "basic_app"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
rusty_dom = { path = "../../" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

